--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -64,6 +64,7 @@ $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
 $webResourceManager.requireResource("jira.webresources:dwr", null)   
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
+$webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-resources")
 <body>
 <form name="chartReportForm"  method="get" action="JiraTimetrackerChartWebAction.jspa" />   
 	#set($rendererType = "atlassian-wiki-renderer")
@@ -75,7 +76,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	<div id="plugin_head" class="item-header" style="width:980px;">
 			<div style="float: right;">
 				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
 				</a>
 			</div>
  			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
@@ -342,7 +343,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
       }
       google.load('visualization', '1', {packages:['controls'], callback: drawChart});
 </script>
-
+<div id="feedbackfooter" class="footer">
+	#parse("templates/chart_feedback.vm")
+</div>
 #if($analyticsCheck)
 	#parse("templates/analytics.vm")
 #end
