--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -190,15 +190,6 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 			 			$debugMessage
 			  	</div>
 #end
-<div id="plugin_head" class="item-header" style="width:980px;">
-		<div style="float: right;">
-			#parse("templates/jttp_feedback.vm")
-			<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
-			</a>
-		</div>
-		<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
-</div>
 <form name="jttpForm" id="jttpForm" method="post"
 					#if($isEdit) action="JiraTimetrackerWebAction.jspa?editedWorklogId=$editedWorklogId&dateFormatted=$dateFormatted" 
 					#elseif($isEditAll) action="JiraTimetrackerWebAction.jspa?editAllIds=$editAllIds&dateFormatted=$dateFormatted" 
@@ -208,6 +199,14 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 		#set ($firstDay = 1)
 	#else
 		#set ($firstDay = 0)
+    <div id="plugin_head" class="item-header" style="width:980px;">
+		<div style="float: right;">
+			<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
+				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+			</a>
+		</div>
+		<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+    </div>
 	#end
 	<div id="main-content" class="content rounded" style="width:970px;">
 		<div style="margin:10px; width:970px;">
@@ -792,7 +791,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 		 	 
 	</script>	
 </form>
-
+<div id="feedbackfooter" class="footer">
+	#parse("templates/jttp_feedback.vm")
+</div>
 #if($analyticsCheck)
 	#parse("templates/analytics.vm")
 #end
