--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -95,6 +95,7 @@ $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
 $webResourceManager.requireResource("jira.webresources:dwr", null)
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
+$webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-resources")
 
 <form name="myForm" method="post"action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />
 	#set($rendererType = "atlassian-wiki-renderer")
@@ -105,9 +106,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	#end
 	<div id="plugin_head" class="item-header" style="width: 980px;">
 	  <div style="float: right;">
-	    <a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank"> <img
-	      src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png"
-	      alt="Everit logo" height="42" width="42"style:"float:right"></a>
+	    <a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
+	     	<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+	     </a>
 	  </div>
 	  <h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
 	</div>
@@ -263,7 +264,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	  </div>
 	</div>
 </form>
-
+<div id="feedbackfooter" class="footer">
+	#parse("templates/worklogs_feedback.vm")
+</div>
 #if($analyticsCheck)
 	#parse("templates/analytics.vm")
 #end
