--- a/src/main/resources/templates/summary.vm
+++ b/src/main/resources/templates/summary.vm
@@ -24,7 +24,7 @@
                     <input type="submit" id="monthBack"    name="monthBack" value="<<<" class="button" title="$i18n.getText('plugin.prev.month')"/>
                     <input type="submit" id="weekBack"    name="weekBack" value="<<" class="button"    title="$i18n.getText('plugin.prev.week')"/>
                     <input type="submit" id="dayBack"    name="dayBack" value="<" class="button"    title="$i18n.getText('plugin.prev.day')"/>
-                    $dateFormated
+                    $dateFormatted
                     <img id="date_trigger" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0"
                         alt="Pick a date" class="jttp-calendar-img" title="$i18n.getText('plugin.choose.date')"/>
                     <input type="submit" id="dayNext"    name="dayNext" value=">"    class="button" title="$i18n.getText('plugin.next.day')"/>
@@ -35,7 +35,7 @@
                         firstDay : $firstDay,
                         inputField : 'date',
                         button : 'date_trigger',
-                        date : '$dateFormated',
+                        date : '$dateFormatted',
                         align : 'Br',
                         electric: false,
                         singleClick : true,
