Fixed jttp.vm missing header error. Set feedback div to responsive position.

--- a/src/main/resources/css/jttp_feedback.css
+++ b/src/main/resources/css/jttp_feedback.css
@@ -18,12 +18,11 @@ body{
     overflow: scroll;
 }
 
-.footer{
+.feedback_footer{
     position: relative;
-    top: -10px;
     float: right;
-    right: 695px;
     margin-bottom: 10px;
+    margin-right: 10px;
     padding: 5px;
     text-align: right;
     border: solid;
