--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -66,22 +66,22 @@ $webResourceManager.requireResource("jira.webresources:dwr", null)
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-resources")
 <body>
-<form name="chartReportForm"  method="get" action="JiraTimetrackerChartWebAction.jspa" />   
-	#set($rendererType = "atlassian-wiki-renderer")
-	#if($currentCalendar.useISO8601 == true)
-		#set ($firstDay = 1)
-	#else
-		#set ($firstDay = 0)
-	#end
-	<div id="plugin_head" class="item-header" style="width:980px;">
-			<div style="float: right;">
-				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
-				</a>
-			</div>
- 			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
-  	</div>
-	<div id="main-content" class="content rounded" style="width:970px;">
+#set($rendererType = "atlassian-wiki-renderer")
+#if($currentCalendar.useISO8601 == true)
+	#set ($firstDay = 1)
+#else
+	#set ($firstDay = 0)
+#end
+<div id="plugin_head" class="item-header" style="width:980px;">
+		<div style="float: right;">
+			<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
+				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+			</a>
+		</div>
+		<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+</div>
+<div id="main-content" class="content rounded" style="width:970px;">
+	<form name="chartReportForm"  method="get" action="JiraTimetrackerChartWebAction.jspa" />   
 		<div style="margin:10px; width:970px;">
 			##TAB START
 			<div class="tabwrap tabs2" id="tabs-jttp">
@@ -281,8 +281,11 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 				</div>
 			#end
 		</div>
+	</form>
+	<div id="feedbackfooter" class="feedback_footer">
+		#parse("templates/chart_feedback.vm")
 	</div>
-</form>
+</div>
 
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
@@ -343,9 +346,6 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
       }
       google.load('visualization', '1', {packages:['controls'], callback: drawChart});
 </script>
-<div id="feedbackfooter" class="footer">
-	#parse("templates/chart_feedback.vm")
-</div>
 #if($analyticsCheck)
 	#parse("templates/analytics.vm")
 #end
