--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -191,25 +191,25 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 			 			$debugMessage
 			  	</div>
 #end
-<form name="jttpForm" id="jttpForm" method="post"
+#set($rendererType = "atlassian-wiki-renderer")
+#if($currentCalendar.useISO8601 == true)
+	#set ($firstDay = 1)
+#else
+	#set ($firstDay = 0)
+#end
+<div id="plugin_head" class="item-header" style="width:980px;">
+	<div style="float: right;">
+		<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
+			<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+		</a>
+	</div>
+	<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+</div>
+<div id="main-content" class="content rounded" style="width:970px;">
+	<form name="jttpForm" id="jttpForm" method="post"
 					#if($isEdit) action="JiraTimetrackerWebAction.jspa?editedWorklogId=$editedWorklogId&dateFormatted=$dateFormatted" 
 					#elseif($isEditAll) action="JiraTimetrackerWebAction.jspa?editAllIds=$editAllIds&dateFormatted=$dateFormatted" 
 					#else action="JiraTimetrackerWebAction.jspa?dateFormatted=$dateFormatted" #end/>   
-	#set($rendererType = "atlassian-wiki-renderer")
-	#if($currentCalendar.useISO8601 == true)
-		#set ($firstDay = 1)
-	#else
-		#set ($firstDay = 0)
-    <div id="plugin_head" class="item-header" style="width:980px;">
-		<div style="float: right;">
-			<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
-			</a>
-		</div>
-		<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
-    </div>
-	#end
-	<div id="main-content" class="content rounded" style="width:970px;">
 		<div style="margin:10px; width:970px;">
 			##TAB START
 			<div class="tabwrap tabs2" id="tabs-jttp">
@@ -714,96 +714,96 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 			<input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button" style="display: inline; float: right;"/>
 			<input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerWebAction!default.jspa?dateFormatted=$dateFormatted'" class="button"/>
 			</div>
-		</div>	
-	</div>
-	<script>
-		window.onload = function() {
-			document.getElementById('inputfields').scrollIntoView(allignWithTop=false);
-			setExcludeDaysToWeekend();
-			setLoggedDaysDesign();
- 			document.getElementById("startTime").focus();
- 			AJS.$('.aui-ss-editing').attr("style","width: 250px;");
- 			AJS.$('.aui-ss.aui-ss-editing .aui-ss-field').attr("style","width: 250px;");
-		 };
-		 
-		 AJS.$('.table-endtime').click(function(){
-		 	var temp = new String(AJS.$(this).html());
-		 	AJS.$('#startTime').val(temp.trim());
-		 });
-		 AJS.$('.table-starttime').click(function(){
-		 	var temp = new String(AJS.$(this).html());
-		 	AJS.$('#endTime').val(temp.trim());
-		 });
-		 
-		 AJS.$('.table-comment').click(function(){
-			 var temp = AJS.$(this).find('#hiddenWorklogBody').val();
-			
-			 var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
-			 var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
-	     
-	     	 AJS.$("#comments").html(temp2);
-	     	 AJS.$("#comments").val(temp3);
-		 });
-		 
-		 AJS.$('.table-issue').click(function(){
-		 	AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
-		 	
-		 	var temp = new String(AJS.$(this).find('a').html());
-		 	AJS.$('#issueSelect-textarea').val(temp.trim());
-		 	AJS.$('#issueSelect-textarea').focus();
-		 	AJS.$('#Edit').focus();
-		 	AJS.$('#Submitbutton').focus();
-		 });
-		 
-		 AJS.$('.copy').click(function(){
-		    AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
-		    
-		 	var temp = AJS.$(this).parent().parent().find('.table-issue').find('a').html();
-		 	AJS.$('#issueSelect-textarea').val(temp.trim());
-		 	
-		 	temp = AJS.$(this).parent().parent().find('#hiddenWorklogBody').val();
-		 	var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
-		 	var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
-		 	
-		 	AJS.$("#comments").html(temp2);
-		 	AJS.$("#comments").val(temp3);
-		 	
-		 	AJS.$('#issueSelect-textarea').focus();
-		 	AJS.$('#Submitbutton').focus();
-		 });
-		 
-		 function isIssueSelectorPopupVisible() {
-		 	var visible = AJS.$("#issueSelect-suggestions .aui-list-scroll h5").is(":visible");
-		 	return visible;
-		 }
-		 
-		 AJS.$('#issueSelect-textarea').keydown(function(e){
-		    var isEnter = e.keyCode == 10 || e.keyCode == 13;
-	        if (isEnter && e.ctrlKey) {
-	          AJS.$('#Submitbutton, #Edit').click();
-	        } else if (isEnter && !isIssueSelectorPopupVisible()) {
-	        	e.preventDefault();
-	        	e.stopPropagation();
-	        	return false;
-	        }
-	        
-	     });
-	     
-	     AJS.$('#comments').keydown(function(e){
-	       if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey){
-		     AJS.$('#Submitbutton, #Edit').click();
-           }
-	     });
-	     
-	     AJS.$('#jttpForm').submit(function () {
-	        AJS.$('#Submitbutton').prop("disabled", true);
-	        return true;
-	     });
+		</div>
+		<script>
+			window.onload = function() {
+				document.getElementById('inputfields').scrollIntoView(allignWithTop=false);
+				setExcludeDaysToWeekend();
+				setLoggedDaysDesign();
+	 			document.getElementById("startTime").focus();
+	 			AJS.$('.aui-ss-editing').attr("style","width: 250px;");
+	 			AJS.$('.aui-ss.aui-ss-editing .aui-ss-field').attr("style","width: 250px;");
+			 };
+			 
+			 AJS.$('.table-endtime').click(function(){
+			 	var temp = new String(AJS.$(this).html());
+			 	AJS.$('#startTime').val(temp.trim());
+			 });
+			 AJS.$('.table-starttime').click(function(){
+			 	var temp = new String(AJS.$(this).html());
+			 	AJS.$('#endTime').val(temp.trim());
+			 });
+			 
+			 AJS.$('.table-comment').click(function(){
+				 var temp = AJS.$(this).find('#hiddenWorklogBody').val();
+				
+				 var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
+				 var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
+		     
+		     	 AJS.$("#comments").html(temp2);
+		     	 AJS.$("#comments").val(temp3);
+			 });
+			 
+			 AJS.$('.table-issue').click(function(){
+			 	AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
+			 	
+			 	var temp = new String(AJS.$(this).find('a').html());
+			 	AJS.$('#issueSelect-textarea').val(temp.trim());
+			 	AJS.$('#issueSelect-textarea').focus();
+			 	AJS.$('#Edit').focus();
+			 	AJS.$('#Submitbutton').focus();
+			 });
+			 
+			 AJS.$('.copy').click(function(){
+			    AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
+			    
+			 	var temp = AJS.$(this).parent().parent().find('.table-issue').find('a').html();
+			 	AJS.$('#issueSelect-textarea').val(temp.trim());
+			 	
+			 	temp = AJS.$(this).parent().parent().find('#hiddenWorklogBody').val();
+			 	var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
+			 	var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
+			 	
+			 	AJS.$("#comments").html(temp2);
+			 	AJS.$("#comments").val(temp3);
+			 	
+			 	AJS.$('#issueSelect-textarea').focus();
+			 	AJS.$('#Submitbutton').focus();
+			 });
+			 
+			 function isIssueSelectorPopupVisible() {
+			 	var visible = AJS.$("#issueSelect-suggestions .aui-list-scroll h5").is(":visible");
+			 	return visible;
+			 }
+			 
+			 AJS.$('#issueSelect-textarea').keydown(function(e){
+			    var isEnter = e.keyCode == 10 || e.keyCode == 13;
+		        if (isEnter && e.ctrlKey) {
+		          AJS.$('#Submitbutton, #Edit').click();
+		        } else if (isEnter && !isIssueSelectorPopupVisible()) {
+		        	e.preventDefault();
+		        	e.stopPropagation();
+		        	return false;
+		        }
+		        
+		     });
+		     
+		     AJS.$('#comments').keydown(function(e){
+		       if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey){
+			     AJS.$('#Submitbutton, #Edit').click();
+	           }
+		     });
+		     
+		     AJS.$('#jttpForm').submit(function () {
+		        AJS.$('#Submitbutton').prop("disabled", true);
+		        return true;
+		     });
 		 	 
-	</script>	
-</form>
-<div id="feedbackfooter" class="footer">
-	#parse("templates/jttp_feedback.vm")
+		</script>	
+	</form>
+	<div id="feedbackfooter" class="feedback_footer">
+		#parse("templates/jttp_feedback.vm")
+	</div>
 </div>
 #if($analyticsCheck)
 	#parse("templates/analytics.vm")
