--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -97,22 +97,22 @@ $webResourceManager.requireResource("jira.webresources:dwr", null)
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-resources")
 
-<form name="myForm" method="post"action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />
-	#set($rendererType = "atlassian-wiki-renderer")
-	#if($currentCalendar.useISO8601 == true)
-		#set ($firstDay = 1)
-	#else
-		#set ($firstDay = 0)
-	#end
-	<div id="plugin_head" class="item-header" style="width: 980px;">
-	  <div style="float: right;">
-	    <a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-	     	<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
-	     </a>
-	  </div>
-	  <h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+#set($rendererType = "atlassian-wiki-renderer")
+#if($currentCalendar.useISO8601 == true)
+	#set ($firstDay = 1)
+#else
+	#set ($firstDay = 0)
+#end
+<div id="plugin_head" class="item-header" style="width: 980px;">
+	<div style="float: right;">
+	   <a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
+	     <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+	   </a>
 	</div>
-	<div id="main-content" class="content rounded" style="width: 970px;">
+	<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+</div>
+<div id="main-content" class="content rounded" style="width: 970px;">
+	<form name="myForm" method="post"action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />
 	  <div style="margin: 10px; width: 970px;">
 	    ##TAB START
 	    <div class="tabwrap tabs2" id="tabs-jttp">
@@ -262,10 +262,10 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 	    </div>
 	    #end
 	  </div>
+	</form>
+	<div id="feedbackfooter" class="feedback_footer">
+		#parse("templates/worklogs_feedback.vm")
 	</div>
-</form>
-<div id="feedbackfooter" class="footer">
-	#parse("templates/worklogs_feedback.vm")
 </div>
 #if($analyticsCheck)
 	#parse("templates/analytics.vm")
