--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -802,7 +802,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 		</script>	
 	</form>
 	<div id="feedbackfooter" class="feedback_footer">
-		#parse("templates/jttp_feedback.vm")
+		#parse("templates/feedback_jttp.vm")
 	</div>
 </div>
 #if($analyticsCheck)
