--- a/src/main/resources/templates/feedback_content.vm
+++ b/src/main/resources/templates/feedback_content.vm
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  *#
-<div class="aui-dialog2-content">
+<div class="aui-dialog2-content" style="padding-right: 60px;">
   <div id="feedbackError" style="margin-bottom: 5px; width: 100%; float: left; display: none;" class="error_message">
     <p>$i18n.getText('jttp.feedback.missing')</p>
   </div>
@@ -36,7 +36,7 @@
     </tr>
     <tr>
       <td class="label_td">
-        <label style="margin-bottom: 5px;">$i18n.getText('jttp.feedback.msg') <img src="$contextPath/images/required.png" width="16" height="16" border="0" /></label>
+        <label style="margin-bottom: 5px;">$i18n.getText('jttp.feedback.msg') <span class="aui-icon icon-required" style="position: initial; cursor: initial;">Required</span></label> 
       </td>
       <td>
         <textarea id="feedbackinput" name="feedbackinput" style="width: 100%; height: 300px; resize: none;"></textarea>
@@ -47,7 +47,7 @@
         <label style="margin-bottom: 5px;">$i18n.getText('jttp.feedback.customer.mail')</label>
       </td>
       <td>
-        <input type="text" id="customerMail" name="customerMail" class="text">
+        <input type="text" id="customerMail" name="customerMail" class="text"/> <span class="aui-icon aui-icon-small aui-iconfont-help" style="cursor: pointer;" title="$i18n.getText('jttp.feedback.mail.help')">help</span>
       </td>
     </tr>
   </table>
