--- a/src/main/resources/templates/adminsettings.vm
+++ b/src/main/resources/templates/adminsettings.vm
@@ -235,7 +235,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 					<tr>
 						<td></td>
 						<td>
-							<div>
+							<div style="padding-top: 5px;">
 							<input id="analyticsCheckEnable" type="radio" name="analyticsCheck" value="enable" #if($analyticsCheck) checked #end/>
 										$i18n.getText("plugin.settings.analytics.radiobutton.enable")
 							<input id="analyticsCheckDisable" type="radio" name="analyticsCheck" value="disable" #if(!$analyticsCheck) checked #end/>
