--- a/src/main/resources/templates/feedback_content.vm
+++ b/src/main/resources/templates/feedback_content.vm
@@ -39,7 +39,7 @@
         <label style="margin-bottom: 5px;">$i18n.getText('jttp.feedback.msg') <span class="aui-icon icon-required" style="position: initial; cursor: initial;">Required</span></label> 
       </td>
       <td>
-        <textarea id="feedbackinput" name="feedbackinput" style="width: 100%; height: 300px; resize: none;"></textarea>
+        <textarea id="feedbackinput" name="feedbackinput" style="width: 100%; height: 300px; resize: none; border-radius: 0.3em;"></textarea>
       </td>
     </tr>
     <tr>
